# layer

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: autofix.yml  ci.yml
crates/gpmcp--layer-windows/: Cargo.toml
crates/gpmcp--layer-windows/src/: windows_process_manager.rs
crates/gpmcp-layer/: Cargo.toml
crates/gpmcp-layer-core/: Cargo.toml
crates/gpmcp-layer-core/src/: config.rs  error.rs  layer.rs  lib.rs  process.rs  process_manager_trait.rs  stdio.rs
crates/gpmcp-layer-core/src/runner/: inner.rs  mod.rs  process_manager_trait.rs  service_coordinator.rs  transport_manager.rs
crates/gpmcp-layer-unix/: Cargo.toml
crates/gpmcp-layer-unix/src/: lib.rs  runner_process_manager.rs  unix_process_manager.rs
crates/gpmcp-layer-windows/src/: lib.rs  runner_process_manager.rs  windows_process_manager.rs
crates/gpmcp-layer/src/: catch.rs  error.rs  factory.rs  layer.rs  lib.rs  runner.rs
crates/gpmcp-layer/src/runner/: inner.rs  mod.rs  platform_factory.rs  process_manager.rs  service_coordinator.rs  transport_manager.rs
crates/gpmcp-unix/: Cargo.toml
crates/gpmcp-unix/src/: lib.rs
crates/gpmcp-windows/: Cargo.toml
crates/gpmcp-windows/src/: lib.rs
crates/gpmcp_core/: Cargo.toml
crates/gpmcp_core/src/: config.rs  error.rs  lib.rs  process.rs
crates/gpmcp_layer/: Cargo.toml
crates/gpmcp_layer/src/: error.rs  layer.rs  lib.rs  runner_config.rs
crates/gpmcp_layer/src/runner/: inner.rs  integration_tests.rs  mod.rs  platform_factory.rs  process_manager.rs  process_runner.rs  transport_manager.rs  unix_process_manager.rs
crates/gpmcp_layer/tests/: runner_tests.rs
crates/gpmcp_unix/: Cargo.toml
crates/gpmcp_unix/src/: lib.rs  unix_process_handle.rs  unix_process_manager.rs
crates/gpmcp_windows/: Cargo.toml
crates/gpmcp_windows/src/: lib.rs  windows_process_manager.rs
examples/: README.md  process_manager_demo.rs
examples/servers/counter/: Cargo.toml  README.md
examples/servers/counter/src/: counter.rs  main.rs
examples/simple/: Cargo.toml  README.md
examples/simple/src/: main.rs
examples/simple_sse/: Cargo.toml  README.md
examples/simple_sse/src/: main.rs
examples/simple_stdio/: Cargo.toml  README.md
examples/simple_stdio/src/: main.rs
examples/test-mcp-server/: Cargo.toml  README.md
examples/test-mcp-server/src/: counter.rs  main.rs
src/: lib.rs  retry_config.rs  runner.rs  runner_config.rs  server.rs
src/runner/: inner.rs  integration_tests.rs  mod.rs  platform_factory.rs  process_manager.rs  process_runner.rs  process_traits.rs  service_coordinator.rs  sse_test.rs  transport_manager.rs  unix_process_manager.rs  windows_process_manager.rs
src/runner/temp/: mod.rs  runner_factory.rs  simple_trait_manager.rs  trait_based_runner.rs  trait_process_manager.rs
src/runner/temp/traits/: mod.rs  process_lifecycle.rs  service.rs  termination.rs  transport.rs
