[package]
name = "layer"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
sysinfo = "0.32"
nix = { version = "0.29", features = ["signal", "process"] }
rmcp = { git = "https://github.com/modelcontextprotocol/rust-sdk", rev = "a66f66ae345a0fafde1e2ee496ec137d77aef82a", features = [
    "client",
    "transport-sse-client",
    "reqwest",
    "transport-streamable-http-client",
    "transport-child-process",
    "server",
    "transport-sse-server",
    "transport-streamable-http-server",
] }
derive_builder = "0.20.2"
tokio-util = "0.7.15"
reqwest = { version = "0.12", features = ["json", "stream"] }
async-trait = "0.1"
thiserror = "2.0.12"
backon = "1.2"