[package]
name = "gpmcp-layer-core"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
async-trait = "0.1"
thiserror = "2.0.12"
derive_builder = "0.20.2"
tokio = { version = "1.45.1", features = ["time"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
rmcp = { git = "https://github.com/gpmcp/rust-sdk", rev = "e615300feae62a01f90f40fc7711ab15c3f0a88c", features = [
    "client",
    "transport-sse-client",
    "reqwest",
    "transport-streamable-http-client",
    "transport-child-process",
    "server",
    "transport-sse-server",
    "transport-streamable-http-server",
] }
tokio-util = "0.7.15"
reqwest = { version = "0.12", features = ["json", "stream"] }
backon = "1.2"
tokio-stream = "0.1.17"
derive_more = { version = "2.0.1", features = ["from"] }
