[package]
name = "gpmcp-layer-unix"
version = "0.1.0"
edition = "2024"

[dependencies]
gpmcp-layer-core = { git = "https://github.com/gpmcp/layer" }
tokio = { version = "1.0", features = ["full"] }
anyhow = "1.0"
tracing = "0.1"
sysinfo = "0.35.2"
async-trait = "0.1"

[target.'cfg(unix)'.dependencies]
nix = { version = "0.30.1", features = ["signal", "process"] }
