[package]
name = "gpmcp-layer"
version = "0.1.0"
edition = "2024"

[dependencies]
gpmcp-layer-core = { path = "../gpmcp-layer-core" }
tokio = { version = "1.0", features = ["full"] }
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
rmcp = { git = "https://github.com/modelcontextprotocol/rust-sdk", rev = "8a577659f01917289064c0a3c753392b44305ef4", features = [
    "client",
    "transport-sse-client",
    "reqwest",
    "transport-streamable-http-client",
    "transport-child-process",
    "server",
    "transport-sse-server",
    "transport-streamable-http-server",
] }
tokio-util = "0.7.15"
reqwest = { version = "0.12", features = ["json", "stream"] }
backon = "1.2"

# Platform-specific dependencies
[target.'cfg(unix)'.dependencies]
gpmcp-layer-unix = { path = "../gpmcp-layer-unix" }
nix = { version = "0.30.1", features = ["signal", "process"] }

[target.'cfg(windows)'.dependencies]
gpmcp-layer-windows = { path = "../gpmcp--layer-windows" }
