[package]
name = "gpmcp-layer"
version = "0.1.0"
edition = "2024"

[dependencies]
gpmcp-layer-core = { path = "../gpmcp-layer-core" }
tokio = { version = "1.0", features = ["full"] }
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
rmcp = { git = "https://github.com/gpmcp/rust-sdk", rev = "b9d7d61ebd6e8385cbc4aa105d4e25774fc1a59c", features = [
    "client",
    "transport-sse-client",
    "reqwest",
    "transport-streamable-http-client",
    "transport-child-process",
    "server",
    "transport-sse-server",
    "transport-streamable-http-server",
] }
tokio-util = "0.7.15"
reqwest = { version = "0.12", features = ["json", "stream"] }
backon = "1.2"
thiserror = "2.0.12"
derive_more = { version = "2.0.1", features = ["from"] }

# Platform-specific dependencies
[target.'cfg(unix)'.dependencies]
gpmcp-layer-unix = { path = "../gpmcp-layer-unix" }
nix = { version = "0.30.1", features = ["signal", "process"] }

[target.'cfg(windows)'.dependencies]
gpmcp-layer-windows = { path = "../gpmcp-layer-windows" }
