[package]
name = "gpmcp-layer"
version = "0.1.0"
edition = "2024"

[dependencies]
gpmcp-layer-core = { path = "../gpmcp-layer-core" }
anyhow = "1.0"
async-trait = "0.1"
rmcp = { git = "https://github.com/gpmcp/rust-sdk", rev = "b9d7d61ebd6e8385cbc4aa105d4e25774fc1a59c", features = [
    "client",
    "transport-sse-client",
    "reqwest",
    "transport-streamable-http-client",
    "transport-child-process",
    "server",
    "transport-sse-server",
    "transport-streamable-http-server",
] }


# Platform-specific dependencies
[target.'cfg(unix)'.dependencies]
gpmcp-layer-unix = { path = "../gpmcp-layer-unix" }
nix = { version = "0.30.1", features = ["signal", "process"] }

[target.'cfg(windows)'.dependencies]
gpmcp-layer-windows = { path = "../gpmcp-layer-windows" }

[dev-dependencies]
tokio = { version = "1.0", features = ["full"] }
