[package]
name = "gpmcp_unix"
version = "0.1.0"
edition = "2024"

[dependencies]
gpmcp_core = { path = "../gpmcp_core" }
tokio = { version = "1.0", features = ["full"] }
anyhow = "1.0"
tracing = "0.1"
sysinfo = "0.35.2"
nix = { version = "0.29", features = ["signal", "process"] }
async-trait = "0.1"

[target.'cfg(unix)'.dependencies]
# Unix-specific dependencies only available on Unix platforms