[package]
name = "gpmcp_windows"
version = "0.1.0"
edition = "2024"

[dependencies]
gpmcp_core = { path = "../gpmcp_core" }
tokio = { version = "1.0", features = ["full"] }
anyhow = "1.0"
tracing = "0.1"
sysinfo = "0.35.2"
async-trait = "0.1"

[target.'cfg(windows)'.dependencies]
# Windows-specific dependencies only available on Windows platforms
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_System_Threading",
    "Win32_System_Diagnostics_ToolHelp",
] }