[package]
name = "counter"
version = "0.1.0"
edition = "2024"

[dependencies]
serde_json = "1.0.140"
rmcp = { git = "https://github.com/gpmcp/rust-sdk", rev = "e615300feae62a01f90f40fc7711ab15c3f0a88c", features = [
    "client",
    "transport-sse-client",
    "reqwest",
    "transport-streamable-http-client",
    "transport-child-process",
    "server",
    "transport-sse-server",
    "transport-io",
    "transport-streamable-http-server",
] }
tokio = { version = "1.45.1", features = ["full"] }
axum = "0.8.4"
tracing = "0.1.41"
anyhow = "1.0.98"
tokio-util = "0.7.15"
tower = "0.4.13"
