[package]
name = "counter"
version = "0.1.0"
edition = "2024"

[dependencies]
serde_json = "1.0.140"
rmcp = { git = "https://github.com/gpmcp/rust-sdk", rev = "b9d7d61ebd6e8385cbc4aa105d4e25774fc1a59c", features = [
    "client",
    "transport-sse-client",
    "reqwest",
    "transport-streamable-http-client",
    "transport-child-process",
    "server",
    "transport-sse-server",
    "transport-io",
    "transport-streamable-http-server",
] }
tokio = { version = "1.45.1", features = ["full"] }
axum = "0.8.4"
tracing = "0.1.41"
anyhow = "1.0.98"
